force-app/main/default/objects/Order/fields/Order_Discount__c.field-meta.xml
<CustomField>
    <fullName>Order_Discount__c</fullName>
    <label>Order Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>