force-app/main/default/objects/Order/fields/Promotional_Discount__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Discount__c</fullName>
    <label>Promotional Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>