force-app/main/default/objects/Order/fields/Shipping_Fee__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Fee__c</fullName>
    <label>Shipping Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>